src/test/ui/libstd-case-typo/cmp.rs
// checks case typos with libstd::cmp structs
fn main(){}

fn test_rev(_x: reverse<()>){}
//~^ ERROR: cannot find type `reverse` in this scope
